2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/retinex.c:  initialize memory before using.
	Fixes bug #157915.

2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimplayer-floating-sel.c: set "Keep Transparency"
	FALSE when creating floating sel; see bug #161042.

2005-06-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c: minor changes, mainly to the
	Rescan dialog.

2005-06-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/FractalExplorer.c: applied a patch from
	Karine Delvare that ports the list to GtkTreeView and replaces the
	XPM icons with stock icons. Fixes bug #140202.

	* plug-ins/FractalExplorer/Makefile.am
	* plug-ins/FractalExplorer/pix_data.h: removed this file.

2005-06-21  Sven Neumann  <sven@gimp.org>

	* app/actions/documents-commands.c: added a second text to the
	confirmation dialog; changed the primary text.

2005-06-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphelp-ids.h: added missing id to fix the build.

2005-06-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/laplace.c: don't normalize the result.
	Fixes bug #306874?

2005-06-20  Michael Natterer  <mitch@gimp.org>

	* app/actions/documents-actions.c
	* app/actions/documents-commands.[ch]
	* app/widgets/gimpdocumentview.c
	* app/widgets/gimphelp-ids.h
	* menus/documents-menu.xml: added "Clear document history" action,
	button, menu item and confirm dialog (bug #140001).

2005-06-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/noisify.c: rename as "plug-in-rgb-noise"
	with menu entry "RGB Noise".  Leave "plug-in-noisify" for
	backward compatibility.

	* plug-ins/common/scatter_hsv.c: rename as "plug-in-hsv-noise"
	with menu entry "HSV Noise".  Leave "plug-in-scatter-hsv" for
	backward compatibility.

2005-06-20  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): set the