@@ -1,5 +1,10 @@
 2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
+	* plug-ins/common/newsprint.c: remove "optimization" that interacts
+	badly with preview; fixes bug #161573.
+	
+2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
 	* plug-ins/common/retinex.c:  initialize memory before using.
 	Fixes bug #157915.
 
